# wattcoin

./: CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  README.md  WEBHOOK_SETUP.md  admin_blueprint.py  ai_provider.py  api_bounties.py  api_llm.py  api_nodes.py  api_pr_review.py  api_reputation.py  api_swarmsolve.py  api_tasks.py  api_webhooks.py  api_wsi.py  bounty_auto_pay.py  bounty_evaluator.py  bridge.py  bridge_web.py  content_security.py  eval_logger.py  pr_security.py  railway.json  railway.toml  requirements.txt  security_scanner.py  wsi_replay.py
.github/: PULL_REQUEST_TEMPLATE.md
bounty/: grok_pr_review.py
data/: contributor_reputation.json  pr_payouts.json  reputation.json
data/wsi_challenges/: clean_bugfix.diff
deployment/: airdrop_claims.json  deploy.sh  launch_checklist.md  pump_fun_metadata.json
docs/: AGENT_COMPUTE_SPEC.md  AI_VERIFICATION_SPEC.md  INTEGRATION_GUIDE.md  MOLTBOOK_TIPPING_SPEC.md  PR_BOUNTY_SYSTEM.md  SCRAPER_API.md  STAKING_DASHBOARD_SPEC.md  SWARMSOLVE_API.md  TASK_MARKETPLACE_API.md  WHITEPAPER.md  WSI_SYSTEM.md
sdk/python/: README.md
sdk/python/wattcoin-python-sdk/: README.md  pyproject.toml
sdk/python/wattcoin-python-sdk/src/wattcoin/: __init__.py  bounties.py  solutions.py
sdk/python/wattcoin-python-sdk/tests/: real_api_test.py  smoke_test.py
tests/: ss_debug.md  test_task_leaderboard.py
tipping/: tip_tracker.json
wattnode/: CHANGELOG_GUI.md  INSTALL.md  README.md  README_GUI.md  build_linux.py  config.example.yaml  requirements.txt  requirements_gui.txt  wattnode.py  wattnode_gui.py
(+12 files in other folders)
