[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wattcoin"
version = "0.1.0"
description = "Official Python SDK for WattCoin API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Andrey", email = "andrey@example.com" }
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]
